# mysql-modern-cpp

./: CMakeLists.txt
cmake/: mysqlppp-config.cmake
include/mysql+++/: mysql+++.h
include/mysql+++/polyfill/: datetime.h  function_traits.h
test/: test.cpp
